# moneymakers-vpn

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
